
JMX:
----------------------
* Add ability to require username/password for JMX interface (CC-128). Patch by Glenn Brown
* Upgraded to MX4J 3.0.1

JMX Support:
----------------------
* Expose Project's BuildStartTime as JMX attribute (CC-92). Patch by Jerome Lacoste

Macker:
----------------------
* Add support for Macker in HTMLEmailPublisher and reporting/JSP app. Patch by Andrew Sadler

MavenSnapshotDependency:
----------------------
* fix NPE when dependency lacks version tag. Patch by Josh W. Arnold
* MavenSnapshotDependency NPE when no deps listed (CC-248). Patch by Tim Shadel

MKS:
----------------------
* Overhaul of MKS source control. Submitted by Dominik Hirt

navigation.jsp:
----------------------
* Hide navigation drop down when it is empty CC-96. Based on patch by Jerome Lacoste

OnFailurePublisher & OnSuccessPublisher:
----------------------
* Add new publisher that simply wraps other publishers and invokes them only if the build was successful.
* OnFailure version added (& common ConditionalPublisher extracted) by Robert Smith

OSEnvironment
----------------------
* Fix problem on systems where "env" doesn't return list of '=' separated name/value pairs (CC-166). Patch by Jerome Lacoste

P4:
----------------------
* Use double quote only on Windows, single quote otherwise.
* Migrated to use CommandLine util class for correct execution across environments. Patch by Jason Parrott.
* Fixed parsing logic when file has more than 100 revisions. Patch by David Golombek.
* Add optional Perforce password (CC-208). Patch by J D Glanville

P4Bootstrapper:
----------------------
* Deprecated attributes path, p4Port, p4User, and p4Client in favor
  of view, port, user, client to maintain consistency with P4 (SourceControl).
* Migrated to use CommandLine util class for correct execution across environments. Patch by Jason Parrott.
* Add optional Perforce password (CC-208). Patch by J D Glanville

ProjectXMLHelper:
----------------------